# Linbox-Tx11-aar

./: .gitmodules  build.gradle  gradle.properties  settings.gradle
.github/workflows/: build.xml  build.yml  termux-x11-aar-build.yml
app/: build.gradle
app/src/androidTest/java/com/winfusion/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/builtin/: box64-0.3.5.wfp  xkb.tar.xz
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/ashmem/: CMakeLists.txt
app/src/main/cpp/ashmem/src/: ashmem-dev.cpp  ashmem.h
app/src/main/cpp/cairo/: CMakeLists.txt  cairo-features.h.in  config.h.in
app/src/main/cpp/ffi/: CMakeLists.txt  fficonfig.h.in
app/src/main/cpp/fluidsynth/: CMakeLists.txt  make_tables.cmake
app/src/main/cpp/glib/: CMakeLists.txt  config.h.in  gen-visibility-macros.cmake  glibconfig.h.in
app/src/main/cpp/icoutils/: CMakeLists.txt
app/src/main/cpp/icoutils/src/: extract.c  fileread.c  fileread.h  icotool.h  jni_icoutils.c  restable.c  win32-endian.c  win32.h  wrestool.h
app/src/main/cpp/icoutils/src/common/: common.h  comparison.h  error.c  error.h  hmap.c  hmap.h  intutil.c  intutil.h  io-utils.c  io-utils.h  llist.c  llist.h  strbuf.c  strbuf.h  string-utils.c  string-utils.h  tmap.c  tmap.h
app/src/main/cpp/icoutils/src/lib/: gettext.h  minmax.h  xalloc-die.c  xalloc.h  xasprintf.c  xmalloc.c  xsize.c  xsize.h  xvasprintf.c  xvasprintf.h
app/src/main/cpp/patchelf/: CMakeLists.txt
app/src/main/cpp/patchelf/src/: jni_patchelf.cpp  patchelf.h  patchelf.tpp
app/src/main/cpp/pcre2/: CMakeLists.txt
app/src/main/cpp/pixman/: CMakeLists.txt  pixman-config.h.in
app/src/main/cpp/png/: CMakeLists.txt
app/src/main/cpp/scripts/: utils.cmake  wayland-scanner.cmake
app/src/main/cpp/wayland/: .gitignore  CMakeLists.txt  config.h.in
app/src/main/cpp/wayland-protocols/: CMakeLists.txt
app/src/main/cpp/weston/: CMakeLists.txt  config.h.in  xxd.cmake
app/src/main/cpp/winfusion/: CMakeLists.txt
app/src/main/cpp/winfusion/include/common/: list.h  log.h  types.h
app/src/main/cpp/winfusion/include/egl-shim/: egl.h
app/src/main/cpp/winfusion/include/fallback/memfd/sys/: mman.h
app/src/main/cpp/winfusion/include/shm/: shm-client.h  shm-server.h
app/src/main/cpp/winfusion/include/shm/drivers/: midi_driver.h
app/src/main/cpp/winfusion/include/wayland/: weston.h
app/src/main/cpp/winfusion/src/: box64_loader.c  dlopen_preload.c
app/src/main/cpp/winfusion/src/common/: list.c  log.c
app/src/main/cpp/winfusion/src/egl-shim/: eglapi.c  egldisplay.c
app/src/main/cpp/winfusion/src/fallback/: memfd.c
app/src/main/cpp/winfusion/src/shm/: shm-client.c  shm-server.c
app/src/main/cpp/winfusion/src/shm/drivers/: midi_driver.c
app/src/main/cpp/winfusion/src/wayland/: weston-config.c  weston-input.c  weston.c
app/src/main/cpp/xkbcommon/: CMakeLists.txt
app/src/main/java/com/termux/x11/: LoriePreferences.java  MainActivity.java
app/src/main/java/com/winfusion/activity/: Box64PresetEditorActivity.java  MainActivity.java  RegistryEditorActivity.java  WineActivity.java
app/src/main/res/anim/: anim_fade_in.xml  anim_fade_out.xml  anim_slide_in.xml  anim_slide_out.xml
app/src/main/res/drawable/: bg_float_popup_body.xml  bg_float_popup_header.xml  bg_float_popup_header_expand.xml  bg_outline.xml  ic_add_to_home_screen.xml  ic_adjust.xml  ic_android.xml  ic_architecture.xml  ic_box64.xml  ic_box86.xml  ic_build.xml  ic_cached.xml  ic_content_copy.xml  ic_copy_all.xml  ic_dashboard.xml  ic_delete_forever.xml  ic_design_services.xml  ic_developer_board.xml  ic_expand_less.xml  ic_expand_more.xml  ic_file.xml  ic_file_audio.xml  ic_file_bin.xml  ic_file_download.xml  ic_file_num.xml  ic_file_txt.xml  ic_fullscreen.xml  ic_gamepad.xml  ic_home.xml  ic_keyboard.xml  ic_mesa.xml  ic_monitor.xml  ic_photo_library.xml  ic_piano.xml  ic_play_arrow.xml  ic_registry.xml  ic_remove.xml  ic_save_alt.xml  ic_settings_filled.xml  ic_settings_outlined.xml  (+13 more)
app/src/main/res/layout/: activity_box64_preset_editor.xml  activity_content_manager.xml  activity_controls_overlay_editor.xml  activity_main.xml  activity_registry_editor.xml  activity_weston.xml  activity_wine.xml  card_container.xml  card_content.xml  card_home_setting.xml  card_overlay_profile.xml  card_shortcut.xml  card_simple_outlined.xml  dialog_auto_text.xml  dialog_confirm_by_input.xml  dialog_content_details.xml  dialog_edit_registry_value.xml  dialog_edit_text.xml  dialog_keyboard_selector.xml  dialog_launch_progress.xml  dialog_menu.xml  dialog_processing.xml  dialog_slider.xml  fragment_container_properties.xml  fragment_containers.xml  fragment_home_settings.xml  fragment_overlay_profiles.xml  fragment_settings.xml  fragment_shortcut_properties.xml  fragment_shortcuts.xml  layout_app_bar.xml  layout_button_widget_editor.xml  layout_dpad_widget_editor.xml  layout_input_overlay_toolbar.xml  layout_stick_widget_editor.xml  layout_widget_editor.xml  list_item_binding.xml  list_item_menu.xml  list_item_registry_item.xml  list_item_registry_value.xml  (+3 more)
app/src/main/res/layout-w600dp/: activity_main.xml  fragment_container_properties.xml  fragment_shortcut_properties.xml
app/src/main/res/menu/: menu_navigation.xml
app/src/main/res/navigation/: app_nav_graph.xml  dialog_nav_graph.xml
app/src/main/res/values/: arrays.xml  attrs.xml  bools.xml  colors.xml  dimens.xml  integers.xml  setting_options.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/main/res/values-w600dp/: bools.xml  integers.xml
app/src/main/res/xml/: preferences.xml
app/src/test/java/com/winfusion/: EventBusUnitTest.java
frontend-winfusion/: client.c  exec.c  screenshooter.c  text-backend.c
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
include/libweston/: backend-winfusion.h  libweston.h  windowed-output-api.h
libweston/: compositor.c  input.c
libweston/backend-winfusion/: winfusion.c
libweston/renderer-gl/: gl-renderer.c
shell-loader/: build.gradle
(+337 files in other folders)
